feat: add later sections

--- a/preso.tex
+++ b/preso.tex
@@ -198,4 +198,25 @@
       CMD htop
     \end{verbatim}
   \end{frame}
+  \begin{frame}
+    \frametitle{Docker Machine}
+  \end{frame}
+  \begin{frame}
+    \frametitle{Docker Compose}
+  \end{frame}
+  \begin{frame}
+    \frametitle{Docker Swarm}
+  \end{frame}
+  \begin{frame}
+    \frametitle{Docker Hub}
+  \end{frame}
+  \begin{frame}[c,plain]
+    \begin{center}
+      {\Huge Questions?}
+
+      \vspace{1cm}
+
+      \texttt{github.com/madbence/viiima05-preso}
+    \end{center}
+  \end{frame}
 \end{document}
