feat: add docker-arch figure

--- a/preso.tex
+++ b/preso.tex
@@ -76,8 +76,7 @@
   \end{frame}
   \begin{frame}
     \frametitle{The architecture}
-    % \begin{tcolorbox}[fuzzy shadow={0mm}{-2mm}{1mm}{0.2mm}{fill=black!35!white},fuzzy halo=1mm with black!15!white]
-    % \end{tcolorbox}
+    \includegraphics[width=\textwidth]{docker-arch.eps}
   \end{frame}
   \begin{frame}
     \frametitle{Docker image}
