feat: add docker-machine figure

--- a/preso.tex
+++ b/preso.tex
@@ -199,19 +199,26 @@
   \end{frame}
   \begin{frame}
     \frametitle{Docker Machine}
-    \begin{itemize}
-      \item Provision Docker hosts
-      \item Providers:
+    \begin{columns}
+      \begin{column}{0.3\textwidth}
         \begin{itemize}
-          \item VirtualBox
-          \item VMWare
-          \item Hyper-V
-          \item Azure
-          \item OpenStack
-          \item Digital Ocean
-          \item etc.
+          \item Provision Docker hosts
+          \item Providers:
+            \begin{itemize}
+              \item VirtualBox
+              \item VMWare
+              \item Hyper-V
+              \item Azure
+              \item OpenStack
+              \item Digital Ocean
+              \item etc.
+            \end{itemize}
         \end{itemize}
-    \end{itemize}
+      \end{column}
+      \begin{column}{0.7\textwidth}
+        \includegraphics[width=\textwidth]{docker-machine.eps}
+      \end{column}
+    \end{columns}
   \end{frame}
   \begin{frame}
     \frametitle{Docker Machine}
