feat: improve vm vs container comparison

--- a/preso.tex
+++ b/preso.tex
@@ -50,17 +50,17 @@
       \begin{column}{0.5\textwidth}
         VM
         \begin{itemize}
-          \item Good isolation
-          \item Different OS can be simulated
-          \item Needs a lot of resources
+          \item Hardware virtualization
+          \item Any OS
+          \item Overhead (even with hardware support)
         \end{itemize}
       \end{column}
       \begin{column}{0.5\textwidth}
         Container
         \begin{itemize}
-          \item Basic isolation
+          \item Operation-system-level virtualization
           \item Shared kernel
-          \item Lightweigth \& low overhead
+          \item Almost no overhead
         \end{itemize}
       \end{column}
     \end{columns}
