--- a/preso.tex
+++ b/preso.tex
@@ -58,7 +58,7 @@
       \begin{column}{0.5\textwidth}
         Container
         \begin{itemize}
-          \item Operation-system-level virtualization
+          \item Operating-system-level virtualization
           \item Shared kernel
           \item Almost no overhead
         \end{itemize}
