feat: add docker-swarm figure

--- a/preso.tex
+++ b/preso.tex
@@ -241,6 +241,7 @@
   \end{frame}
   \begin{frame}
     \frametitle{Docker Swarm}
+    \includegraphics[width=\textwidth]{swarm}
   \end{frame}
   \begin{frame}
     \frametitle{Docker Hub}
