feat: add docker hub description

--- a/preso.tex
+++ b/preso.tex
@@ -245,6 +245,13 @@
   \end{frame}
   \begin{frame}
     \frametitle{Docker Hub}
+    \begin{itemize}
+      \item The official image repository
+      \item Everyone can push images (\texttt{user/image:tag})
+      \item Automatic image build process (using \texttt{Dockerfile}s)
+      \item Open source, you can host your own repository!
+      \item Public \& private visibility
+    \end{itemize}
   \end{frame}
   \begin{frame}[c,plain]
     \begin{center}
