feat: add docker compose description

--- a/preso.tex
+++ b/preso.tex
@@ -238,6 +238,11 @@
   \end{frame}
   \begin{frame}
     \frametitle{Docker Compose}
+    \begin{itemize}
+      \item Orchestration
+      \item Describes services with a declarative syntax (\texttt{docker-compose.yml})
+      \item \texttt{\$ docker-compose [up/down]}
+    \end{itemize}
   \end{frame}
   \begin{frame}
     \frametitle{Docker Swarm}
